--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,22 +14,22 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/static/styles.css" rel="stylesheet" />
-		<link href="/static/css.css" rel="stylesheet" />
-		<script src="/static/script.js"></script>
+        <link href="/static/css.css" rel="stylesheet" />
+        <script src="/static/script.js"></script>
     </head>
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
+                Menu
+                <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Homepage</a></li>
-                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/organizations">Organizations</a></li>
-                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Homepage</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/organizations">Organizations</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -38,7 +38,7 @@
         <header class="masthead">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center centerText class1">
-                  <strong class="">Contact us!</strong> Feel free to contact us regarding our project...
+                    <strong class="">Contact us!</strong> Feel free to contact us regarding our project...
                 </div>
             </div>
         </header>
@@ -47,85 +47,84 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div>
-					<div class="page-heading" style="margin: auto;text-align: center !important; float: center !important;">
-                    <h1>Contact Us</h1></div>
-                    <p>This website was a collaborative effort by us here at team Cool Ducks.
-          If you would like to get in touch with us here is how you can do so.</p>
-						</div>
-						</div>
-						</div>
-                        <div>
-							<h3>Hackers</h3>
-							<hr>
-							<table border=0 class="contactTable">
-								<tr>
-									<th>
-										<img src="/static/antonio.jpg">
-										<figcaption>Name: Antonio</figcaption>
-										<figcaption>Email: arvallez113@students.ecsu.edu</figcaption>
-									</th>
-									<th>
-										<img src="/static/sincere.jpg">
-										<figcaption>Name: Sincere Ponton</figcaption>
-										<figcaption>Email: sjponton@students.ecsu.edu</figcaption>
-									</th>
-								</tr>
-								<tr>
-									<th>
-										<img src="/static/iasia.jpg">
-										<figcaption>Name: Iasia Cooper</figcaption>
-										<figcaption>Email: iacooper760@students.ecsu.edu</figcaption>
-									</th>
-									<th>
-										<img src="/static/Tony.jpg">
-										<figcaption>Name: Tony Guy</figcaption>
-										<figcaption>Email: sjponton@students.ecsu.edu</figcaption>
-									</th>
-								</tr>
-							</table>
-							<hr>
-							<hr>
-							<h3>Mentors</h3>
-							<hr>
-							<table border=0 class="contactTable">
-								<tr>
-									<th>
-										<img src="/static/mdocsta.jpg">
-										<figcaption>Name: Dr. Malcolm Dcosta</figcaption>
-										<figcaption>Email: mtdcosta@ecsu.edu</figcaption>
-									</th>
-									<th>
-										<img src="/static/melbakary.jpg">
-										<figcaption>Name: Dr. Mohammed Elbakary</figcaption>
-										<figcaption>Email: melbakary@ecsu.edu</figcaption>
-									</th>
-								</tr>
-								<tr>
-									<th id="uniqueID">
-										<img src="/static/jholly.jpg">
-										<figcaption>Name; John Holly</figcaption>
-										<figcaption>Email: jholly@sura.org</figcaption>
-									</th>
-								</tr>
-							</table>
+                        <div class="page-heading" style="margin: auto;text-align: center !important; float: center !important;">
+                            <h1>Contact Us</h1>
                         </div>
+                        <p>This website was a collaborative effort by us here at team Cool Ducks.
+                            If you would like to get in touch with us here is how you can do so.
+                        </p>
                     </div>
                 </div>
+            </div>
+            <div>
+                <h3>Hackers</h3>
+                <hr>
+                <table border=0 class="contactTable">
+                    <tr>
+                        <th>
+                            <img src="/static/antonio.jpg">
+                            <figcaption>Name: Antonio</figcaption>
+                            <figcaption>Email: arvallez113@students.ecsu.edu</figcaption>
+                        </th>
+                        <th>
+                            <img src="/static/sincere.jpg">
+                            <figcaption>Name: Sincere Ponton</figcaption>
+                            <figcaption>Email: sjponton@students.ecsu.edu</figcaption>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>
+                            <img src="/static/iasia.jpg">
+                            <figcaption>Name: Iasia Cooper</figcaption>
+                            <figcaption>Email: iacooper760@students.ecsu.edu</figcaption>
+                        </th>
+                        <th>
+                            <img src="/static/Tony.jpg">
+                            <figcaption>Name: Tony Guy</figcaption>
+                            <figcaption>Email: sjponton@students.ecsu.edu</figcaption>
+                        </th>
+                    </tr>
+                </table>
+                <hr>
+                <hr>
+                <h3>Mentors</h3>
+                <hr>
+                <table border=0 class="contactTable">
+                    <tr>
+                        <th>
+                            <img src="/static/mdocsta.jpg">
+                            <figcaption>Name: Dr. Malcolm Dcosta</figcaption>
+                            <figcaption>Email: mtdcosta@ecsu.edu</figcaption>
+                        </th>
+                        <th>
+                            <img src="/static/melbakary.jpg">
+                            <figcaption>Name: Dr. Mohammed Elbakary</figcaption>
+                            <figcaption>Email: melbakary@ecsu.edu</figcaption>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th id="uniqueID">
+                            <img src="/static/jholly.jpg">
+                            <figcaption>Name; John Holly</figcaption>
+                            <figcaption>Email: jholly@sura.org</figcaption>
+                        </th>
+                    </tr>
+                </table>
+            </div>
+            </div>
+            </div>
             </div>
         </main>
         <!-- Footer-->
         <footer class="border-top">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-
-
                 </div>
             </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
