--- a/templates/index.html
+++ b/templates/index.html
@@ -14,23 +14,23 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/static/styles.css" rel="stylesheet" />
-		<link href="/static/css.css" rel="stylesheet"/>
-		<script src="/static/script.js"></script>
+        <link href="/static/css.css" rel="stylesheet"/>
+        <script src="/static/script.js"></script>
     </head>
     <body>
-		<div>
+        <div>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light navbar2" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
+                Menu
+                <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse stickyBar" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Homepage</a></li>
-                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/organizations">Organizations</a></li>
-                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Homepage</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/organizations">Organizations</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -39,110 +39,104 @@
         <header class="masthead class2" style="">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center centerText class1">
-				<strong class="">Climate Change within St. Louis</strong> Thank you for your interest in Climate Change in the
-				St. Louis area. This webpage was made by the Cool Ducks during the HBCA Hackathon 2021.
+                    <strong class="">Climate Change within St. Louis</strong> Thank you for your interest in Climate Change in the
+                    St. Louis area. This webpage was made by the Cool Ducks during the HBCA Hackathon 2021.
                 </div>
             </div>
-
-			<div>
-				<table border= "1">
-				</table>
-			</div>
+            <div>
+                <table border= "1">
+                </table>
+            </div>
         </header>
         <!-- Main Content-->
         <main class="mb-4">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-						<div class="row gx-4 gx-lg-5 justify-content-center centerText ">
-						<h1><strong class="">Overview</strong></h1> <hr>
-						<p>The Cool Ducks team has noticed that climate change is a major issue in St. Louis.
-						St. Louis' average temperature to rise more than 2 degrees this decade.
-						We know
-						that warmer air holds more moisture than cooler air. This will in time lead to
-						more severe rainfall in the area.</p>
-
-						<p>
-							A long-term change in the average weather patterns that have come to define Earth's local,
-							regional, and global climates is referred to as climate change. These modifications have a
-							wide range of impacts. Climate change is an ongoing issue going on within the world. It has been
-							a major topic of discussion since the late 20th century. Human activities, notably fossil fuel burning,
-							have increased heat-trapping greenhouse gas levels in Earth's atmosphere, elevating Earth's average surface
-							temperature, as seen in changes in the climate from the early twentieth century.
-						</p>
-
-						<p>
-							Unfortunately, St louis has seen its fair share of the impacts of this global crisis we are currently facing.
-							St Louis has seen numerous devastations from increased rainfall over the past few decades due to the rise in greenhouse
-							gas emissions and other human activities. This later would later attribute to a wet fall and increase of moisture levels
-							within the soil of the basins of the Missouri and Mississippi rivers, causing the rivers to flood at an historic high.
-							This is known as the Great Flood of 1993. The Mississippi River peaked at 49.58 feet in St. Louis, the highest level ever recorded.
-							This devastation is responsible for nearly fifty deaths and over fifteen million dollars in damages. Despite the phenomenon, climate
-							change is still being an issue swept underneath the rug.
-						</p>
-
-						<p>
-						We took data we found from a pdf containing the average temperature of St. Louis over the past decades and cleaned through it so that the average
-						temperature would align with the corresponding decade. We then used the clean data and used it to create graphs to visually represent the data patterns using
-						python. Based on the interpretation of the graphs you could then conclude that the average temperature over the years has been on an incline and is currently at an
-						all-time high, which proves that the climate change crises is gradually worsening.
-						</p>
-
-						<p>
-							Climate change is a global health crisis that has the potential to undo decades of progress in health and development, to inflict widespread human suffering, to
-							exacerbate global healthcare disparities, and to jeopardize the environmental and economic systems that we rely on for survival. With all the information mentioned,
-							we hope this encourages you to make difference and choose better environmental decisions!
-						</p>
-
-						</div>
+                        <div class="row gx-4 gx-lg-5 justify-content-center centerText ">
+                            <h1><strong class="">Overview</strong></h1>
+                            <hr>
+                            <p>The Cool Ducks team has noticed that climate change is a major issue in St. Louis.
+                                St. Louis' average temperature to rise more than 2 degrees this decade.
+                                We know
+                                that warmer air holds more moisture than cooler air. This will in time lead to
+                                more severe rainfall in the area.
+                            </p>
+                            <p>
+                                A long-term change in the average weather patterns that have come to define Earth's local,
+                                regional, and global climates is referred to as climate change. These modifications have a
+                                wide range of impacts. Climate change is an ongoing issue going on within the world. It has been
+                                a major topic of discussion since the late 20th century. Human activities, notably fossil fuel burning,
+                                have increased heat-trapping greenhouse gas levels in Earth's atmosphere, elevating Earth's average surface
+                                temperature, as seen in changes in the climate from the early twentieth century.
+                            </p>
+                            <p>
+                                Unfortunately, St louis has seen its fair share of the impacts of this global crisis we are currently facing.
+                                St Louis has seen numerous devastations from increased rainfall over the past few decades due to the rise in greenhouse
+                                gas emissions and other human activities. This later would later attribute to a wet fall and increase of moisture levels
+                                within the soil of the basins of the Missouri and Mississippi rivers, causing the rivers to flood at an historic high.
+                                This is known as the Great Flood of 1993. The Mississippi River peaked at 49.58 feet in St. Louis, the highest level ever recorded.
+                                This devastation is responsible for nearly fifty deaths and over fifteen million dollars in damages. Despite the phenomenon, climate
+                                change is still being an issue swept underneath the rug.
+                            </p>
+                            <p>
+                                We took data we found from a pdf containing the average temperature of St. Louis over the past decades and cleaned through it so that the average
+                                temperature would align with the corresponding decade. We then used the clean data and used it to create graphs to visually represent the data patterns using
+                                python. Based on the interpretation of the graphs you could then conclude that the average temperature over the years has been on an incline and is currently at an
+                                all-time high, which proves that the climate change crises is gradually worsening.
+                            </p>
+                            <p>
+                                Climate change is a global health crisis that has the potential to undo decades of progress in health and development, to inflict widespread human suffering, to
+                                exacerbate global healthcare disparities, and to jeopardize the environmental and economic systems that we rely on for survival. With all the information mentioned,
+                                we hope this encourages you to make difference and choose better environmental decisions!
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </main>
         <h1><strong class="">Data Visualization</strong></h1>
         <table border=0 class="contactTable2">
-          <tr>
+        <tr>
             <th>
-              <img src="/static/linegraph.png"  height="300px">
-              <figcaption>Line Graph</figcaption>
+                <img src="/static/linegraph.png"  height="300px">
+                <figcaption>Line Graph</figcaption>
             </th>
             <th>
-              <img src="/static/bargraph.png"  height="300px">
-              <figcaption>Bar Graph</figcaption>
+                <img src="/static/bargraph.png"  height="300px">
+                <figcaption>Bar Graph</figcaption>
             </th>
-          </tr>
+        </tr>
         </table
         <!-- Footer-->
         <footer class=" row gx-4 centerText justify-content-center" id="footerID">
-		<strong>Citations:</strong>
-		<hr>
-		<hr>
-		<table border = 0>
-		<tr>
-		<p>
-			"Call to Action" <i>Global Climate and Health Forum,</i><br>
-			<a href="https://www.globalclimateandhealthforum.org/call-to-action#:~:text=A%20Call%20to%20Action%20on,depend%20on%20for%20our%20survival">https://www.globalclimateandhealthforum.org/call-to-action#:~:text=A%20Call%20to%20Action%20on,depend%20on%20for%20our%20survival</a>
-
-		</p>
-		</tr>
-		<br>
-		<br>
-		<tr>
-		<p>
-			“Overview: Weather, Global Warming and Climate Change.” <br><i>Nasa</i>
-			NASA, 24 Aug. 2021, <a href="https://climate.nasa.gov/resources/global-warming-vs-climate-change/">https://climate.nasa.gov/resources/global-warming-vs-climate-change/</a>
-		</p>
-		</tr>
-		<tr>
-		<p>
-			<i>TEMP STL Annual Averages.xls 1/5/2021</i> <br> <a href="https://www.weather.gov/media/lsx/climate/stl/temp/temp_stl_annual_averages.pdf">https://www.weather.gov/media/lsx/climate/stl/temp/temp_stl_annual_averages.pdf</a>
-		</p>
-		</tr>
-		</table>
+            <strong>Citations:</strong>
+            <hr>
+            <hr>
+            <table border = 0>
+                <tr>
+                    <p>
+                        "Call to Action" <i>Global Climate and Health Forum,</i><br>
+                        <a href="https://www.globalclimateandhealthforum.org/call-to-action#:~:text=A%20Call%20to%20Action%20on,depend%20on%20for%20our%20survival">https://www.globalclimateandhealthforum.org/call-to-action#:~:text=A%20Call%20to%20Action%20on,depend%20on%20for%20our%20survival</a>
+                    </p>
+                </tr>
+                <br>
+                <br>
+                <tr>
+                    <p>
+                        “Overview: Weather, Global Warming and Climate Change.” <br><i>Nasa</i>
+                        NASA, 24 Aug. 2021, <a href="https://climate.nasa.gov/resources/global-warming-vs-climate-change/">https://climate.nasa.gov/resources/global-warming-vs-climate-change/</a>
+                    </p>
+                </tr>
+                <tr>
+                    <p>
+                        <i>TEMP STL Annual Averages.xls 1/5/2021</i> <br> <a href="https://www.weather.gov/media/lsx/climate/stl/temp/temp_stl_annual_averages.pdf">https://www.weather.gov/media/lsx/climate/stl/temp/temp_stl_annual_averages.pdf</a>
+                    </p>
+                </tr>
+            </table>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
     </body>
 </html>
