--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Climate change</title>
+        <title>Home | Cool Ducks</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -23,14 +23,15 @@
         <nav class="navbar navbar-expand-lg navbar-light navbar2" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
+                Navigation
                 <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse stickyBar" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Homepage</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/organizations">Organizations</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="https://github.com/NekoTony/Climate-Change-in-St.-Louis">Github</a></li>
                     </ul>
                 </div>
             </div>
@@ -39,8 +40,7 @@
         <header class="masthead class2" style="">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center centerText class1">
-                    <strong class="">Climate Change within St. Louis</strong> Thank you for your interest in Climate Change in the
-                    St. Louis area. This webpage was made by the Cool Ducks during the HBCA Hackathon 2021.
+                    <strong class="">Climate Change within St. Louis</strong> Thank you so much for your interest regarding the issue of Climate Change within the St. Louis area.
                 </div>
             </div>
             <div>
@@ -56,35 +56,45 @@
                         <div class="row gx-4 gx-lg-5 justify-content-center centerText ">
                             <h1><strong class="">Overview</strong></h1>
                             <hr>
-                            <p>The Cool Ducks team has noticed that climate change is a major issue in St. Louis.
-                                St. Louis' average temperature to rise more than 2 degrees this decade.
-                                We know
-                                that warmer air holds more moisture than cooler air. This will in time lead to
-                                more severe rainfall in the area.
+                            <p>The Cool Ducks team has taken notice that climate change has been not only St. Louis but the world.
+                                St. Louis' average temperature plans to rise more than 2 degrees this decade alone.
+                                We are aware that warmer air holds more moisture than cooler air. This will eventually lead to
+                                more severe rainfall within the St. Louis area if nothing is done.
                             </p>
                             <p>
                                 A long-term change in the average weather patterns that have come to define Earth's local,
                                 regional, and global climates is referred to as climate change. These modifications have a
-                                wide range of impacts. Climate change is an ongoing issue going on within the world. It has been
-                                a major topic of discussion since the late 20th century. Human activities, notably fossil fuel burning,
-                                have increased heat-trapping greenhouse gas levels in Earth's atmosphere, elevating Earth's average surface
-                                temperature, as seen in changes in the climate from the early twentieth century.
+                                wide range of impacts. Climate Change has been a major topic of discussion since the late 20th century. Human activities, notably fossil fuel burning,
+                                have increased heat-trapping greenhouse gas levels in Earth's atmosphere and elevating Earth's average surface
+                                temperature which can be seen in within the data since from the early twentieth century.
                             </p>
                             <p>
-                                Unfortunately, St louis has seen its fair share of the impacts of this global crisis we are currently facing.
+                                Unfortunately, St louis has seen its fair share of the impacts of this global crisis which we are currently facing.
                                 St Louis has seen numerous devastations from increased rainfall over the past few decades due to the rise in greenhouse
-                                gas emissions and other human activities. This later would later attribute to a wet fall and increase of moisture levels
+                                gas emissions and other human activities. This later would attribute to a wet fall and increase of moisture levels
                                 within the soil of the basins of the Missouri and Mississippi rivers, causing the rivers to flood at an historic high.
-                                This is known as the Great Flood of 1993. The Mississippi River peaked at 49.58 feet in St. Louis, the highest level ever recorded.
+                                This event would go on to be known as the Great Flood of 1993. The Mississippi River peaked at 49.58 feet in St. Louis, the highest level ever recorded.
                                 This devastation is responsible for nearly fifty deaths and over fifteen million dollars in damages. Despite the phenomenon, climate
                                 change is still being an issue swept underneath the rug.
                             </p>
                             <p>
-                                We took data we found from a pdf containing the average temperature of St. Louis over the past decades and cleaned through it so that the average
-                                temperature would align with the corresponding decade. We then used the clean data and used it to create graphs to visually represent the data patterns using
-                                python. Based on the interpretation of the graphs you could then conclude that the average temperature over the years has been on an incline and is currently at an
+                                So, how do we prove this? Well, we took data we found from a pdf containing the average temperature of St. Louis on a yearly basic from 1838-2017 and sorted through the data so we could compute the average
+                                temperature within each decade. We then used the formatted data and used it to create data visualizations to represent the increase of average temperature. Based on the interpretation of the graphs you could then conclude that the average temperature over the years has been on an incline and is currently at an
                                 all-time high, which proves that the climate change crises is gradually worsening.
                             </p>
+                            <h3><strong class="">Data Visualization</strong></h3>
+                            <table border=0 class="contactTable2">
+                              <tr>
+                                  <th>
+                                      <img src="/static/linegraph.png"  height="300px">
+                                      <figcaption>Line Graph</figcaption>
+                                  </th>
+                                  <th>
+                                      <img src="/static/bargraph.png"  height="300px">
+                                      <figcaption>Bar Graph</figcaption>
+                                  </th>
+                              </tr>
+                          </table>
                             <p>
                                 Climate change is a global health crisis that has the potential to undo decades of progress in health and development, to inflict widespread human suffering, to
                                 exacerbate global healthcare disparities, and to jeopardize the environmental and economic systems that we rely on for survival. With all the information mentioned,
@@ -95,19 +105,6 @@
                 </div>
             </div>
         </main>
-        <h1><strong class="">Data Visualization</strong></h1>
-        <table border=0 class="contactTable2">
-        <tr>
-            <th>
-                <img src="/static/linegraph.png"  height="300px">
-                <figcaption>Line Graph</figcaption>
-            </th>
-            <th>
-                <img src="/static/bargraph.png"  height="300px">
-                <figcaption>Bar Graph</figcaption>
-            </th>
-        </tr>
-        </table
         <!-- Footer-->
         <footer class=" row gx-4 centerText justify-content-center" id="footerID">
             <strong>Citations:</strong>
@@ -134,6 +131,11 @@
                     </p>
                 </tr>
             </table>
+        </footer>
+        <footer class="footer mt-auto py-3 bg-light">
+          <div class="container">
+            <span class="text-muted">2021 November Hackathon | Cool Ducks</span>
+          </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
