--- a/static/css.css
+++ b/static/css.css
@@ -20,6 +20,10 @@ table.center {
 	margin: auto;
 }
 
+.imgClass th {
+	margin-bottom: 35px !important;
+}
+
 .class1 {
 	margin-top: -100px;
 	font-size: 26px;
@@ -107,11 +111,13 @@ table.center {
 
 .contactTable2 {
 	margin: auto !important;
+	margin-bottom: 25px;
 }
 
 p {
 	margin: auto !important;
-	margin-bottom: 20px !important;
+	margin-top: 10px !important;
+	margin-bottom: 10px !important;
 }
 
 h1 {
