--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Contact</title>
+        <title>Contact Us | Cool Ducks</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -22,14 +22,15 @@
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
+                Navigation
                 <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Homepage</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/organizations">Organizations</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="https://github.com/NekoTony/Climate-Change-in-St.-Louis">Github</a></li>
                     </ul>
                 </div>
             </div>
@@ -38,7 +39,7 @@
         <header class="masthead">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center centerText class1">
-                    <strong class="">Contact us!</strong> Feel free to contact us regarding our project...
+                    <strong class="">Contact us!</strong> Do you like what you see? If so, feel free to contact us to share your appreciation.
                 </div>
             </div>
         </header>
@@ -50,8 +51,8 @@
                         <div class="page-heading" style="margin: auto;text-align: center !important; float: center !important;">
                             <h1>Contact Us</h1>
                         </div>
-                        <p>This website was a collaborative effort by us here at team Cool Ducks.
-                            If you would like to get in touch with us here is how you can do so.
+                        <p>This website was a collaborative effort by the team known as the Cool Ducks.
+                            If you would like to get in contact with us here, feel free to check out the information below. Thank you!
                         </p>
                     </div>
                 </div>
@@ -116,11 +117,10 @@
             </div>
         </main>
         <!-- Footer-->
-        <footer class="border-top">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                </div>
-            </div>
+        <footer class="footer mt-auto py-3 bg-light">
+          <div class="container">
+            <span class="text-muted">2021 November Hackathon | Cool Ducks</span>
+          </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
