--- a/templates/organizations.html
+++ b/templates/organizations.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+				<title>Organizations | Cool Ducks</title>
+        <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -22,15 +23,16 @@
             <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
                 <div class="container px-4 px-lg-5">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
+                    Navigation
                     <i class="fas fa-bars"></i>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Homepage</a></li>
+                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>
                             <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/organizations">Organizations</a></li>
                             <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
-                        </ul>
+														<li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="https://github.com/NekoTony/Climate-Change-in-St.-Louis">Github</a></li>
+												</ul>
                     </div>
                 </div>
             </nav>
@@ -38,7 +40,7 @@
             <header class="masthead class2" style="">
                 <div class="container position-relative px-4 px-lg-5">
                     <div class="row gx-4 gx-lg-5 justify-content-center centerText class1">
-                        <strong class="">Organizations</strong> Check out these awesome Organizations that help with climate change.
+                        <strong class="">Organizations</strong> Check out these awesome organizations that aim to solve the climate change problem!
                     </div>
                 </div>
                 <div>
@@ -118,8 +120,11 @@
                 </div>
             </main>
             <!-- Footer-->
-            <footer class="">
-            </footer>
+						<footer class="footer mt-auto py-3 bg-light">
+		          <div class="container">
+		            <span class="text-muted">2021 November Hackathon | Cool Ducks</span>
+		          </div>
+		        </footer>
             <!-- Bootstrap core JS-->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
             <!-- Core theme JS-->
