--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Home | Cool Ducks</title>
-        <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="static/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -106,7 +106,7 @@
             </div>
         </main>
         <!-- Footer-->
-        <footer class=" row gx-4 centerText justify-content-center" id="footerID">
+        <div class=" row gx-4 centerText justify-content-center" id="footerID">
             <strong>Citations:</strong>
             <hr>
             <hr>
@@ -131,8 +131,8 @@
                     </p>
                 </tr>
             </table>
-        </footer>
-        <footer class="footer mt-auto py-3 bg-light">
+        </div>
+        <footer class="footer mt-auto py-3 bg-light fixed-bottom">
           <div class="container">
             <span class="text-muted">2021 November Hackathon | Cool Ducks</span>
           </div>
