--- a/templates/contact.html
+++ b/templates/contact.html
@@ -117,7 +117,7 @@
             </div>
         </main>
         <!-- Footer-->
-        <footer class="footer mt-auto py-3 bg-light">
+        <footer class="footer mt-auto py-3 bg-light fixed-bottom">
           <div class="container">
             <span class="text-muted">2021 November Hackathon | Cool Ducks</span>
           </div>
