--- a/templates/organizations.html
+++ b/templates/organizations.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
 				<title>Organizations | Cool Ducks</title>
-        <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="static/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -120,7 +120,7 @@
                 </div>
             </main>
             <!-- Footer-->
-						<footer class="footer mt-auto py-3 bg-light">
+						<footer class="footer mt-auto py-3 bg-light fixed-bottom">
 		          <div class="container">
 		            <span class="text-muted">2021 November Hackathon | Cool Ducks</span>
 		          </div>
