--- a/templates/contact.html
+++ b/templates/contact.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div>
-                <h3>Hackers</h3>
+                <h1>Hackers</h1>
                 <hr>
                 <table border=0 class="contactTable">
                     <tr>
@@ -82,7 +82,7 @@
                         <th>
                             <img src="/static/Tony.jpg">
                             <figcaption>Name: Tony Guy</figcaption>
-                            <figcaption>Email: sjponton@students.ecsu.edu</figcaption>
+                            <figcaption>Email: ttguy983@students.ecsu.edu</figcaption>
                         </th>
                     </tr>
                 </table>
@@ -117,7 +117,7 @@
             </div>
         </main>
         <!-- Footer-->
-        <footer class="footer mt-auto py-3 bg-light fixed-bottom">
+        <footer class="footer mt-auto py-3 bg-light fixed">
           <div class="container">
             <span class="text-muted">2021 November Hackathon | Cool Ducks</span>
           </div>
