--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,7 @@
         </main>
         <!-- Footer-->
         <div class=" row gx-4 centerText justify-content-center" id="footerID">
-            <strong>Citations:</strong>
+            <strong><h1>Citations</h1></strong>
             <hr>
             <hr>
             <table border = 0>
@@ -132,7 +132,7 @@
                 </tr>
             </table>
         </div>
-        <footer class="footer mt-auto py-3 bg-light fixed-bottom">
+        <footer class="footer mt-auto py-3 bg-light fixed">
           <div class="container">
             <span class="text-muted">2021 November Hackathon | Cool Ducks</span>
           </div>
