--- a/templates/index.html
+++ b/templates/index.html
@@ -78,8 +78,7 @@
                                 change is still being an issue swept underneath the rug.
                             </p>
                             <p>
-                                So, how do we prove this? Well, we took data we found from a pdf containing the average temperature of St. Louis on a yearly basic from 1838-2017 and sorted through the data so we could compute the average
-                                temperature within each decade. We then used the formatted data and used it to create data visualizations to represent the increase of average temperature. Based on the interpretation of the graphs you could then conclude that the average temperature over the years has been on an incline and is currently at an
+                                So, how do we prove this? First, we had to come up with a system to provide the latest data of average temperatures throughout St. Louis history. Sadly, the only thing we could find was a PDF url that we could download to get the latest info. However, the PDF format did not hold us back and we found a way to utilize that file. We then took that data we found from their pdf containing the average temperature of St. Louis on a yearly basic from 1838-2017 and sorted through the data so we could compute the average temperature within each decade. We then used the formatted data and to create data visualizations charts which represent the increase of average temperature. Based on the interpretation of the graphs you could then conclude that the average temperature over the years has been on an incline and is currently at an
                                 all-time high, which proves that the climate change crises is gradually worsening.
                             </p>
                             <h3><strong class="">Data Visualization</strong></h3>
